[package]
name = "orange_networking_derive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
# orange_networking = {path = "../orange_networking"}
# Procedural macro generation
syn = "1.0"
quote = "1.0"
proc-macro2 = "1.0"

